--- a/home2.html
+++ b/home2.html
@@ -14,7 +14,7 @@
     <!-- banner section -->
     <section class="w3l-main-slider" id="home">
         <div class="banner-content">
-            <div id="demo-1" style="background-image: url('banner2.jpg');">
+            <div id="demo-1">
                 <div class="demo-inner-content">
                     <div class="container">
                         <div class="banner-info">
